delete logic teams
