# resources/model_member_create.go
@@ -1,158 +1,0 @@
-/*
-Cifra SSO REST API
-
-SSO REST API for Cifra app
-
-API version: 0.0.1
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the MemberCreate type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &MemberCreate{}
-
-// MemberCreate struct for MemberCreate
-type MemberCreate struct {
-	Data MemberCreateData `json:"data"`
-}
-
-type _MemberCreate MemberCreate
-
-// NewMemberCreate instantiates a new MemberCreate object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewMemberCreate(data MemberCreateData) *MemberCreate {
-	this := MemberCreate{}
-	this.Data = data
-	return &this
-}
-
-// NewMemberCreateWithDefaults instantiates a new MemberCreate object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewMemberCreateWithDefaults() *MemberCreate {
-	this := MemberCreate{}
-	return &this
-}
-
-// GetData returns the Data field value
-func (o *MemberCreate) GetData() MemberCreateData {
-	if o == nil {
-		var ret MemberCreateData
-		return ret
-	}
-
-	return o.Data
-}
-
-// GetDataOk returns a tuple with the Data field value
-// and a boolean to check if the value has been set.
-func (o *MemberCreate) GetDataOk() (*MemberCreateData, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Data, true
-}
-
-// SetData sets field value
-func (o *MemberCreate) SetData(v MemberCreateData) {
-	o.Data = v
-}
-
-func (o MemberCreate) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o MemberCreate) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["data"] = o.Data
-	return toSerialize, nil
-}
-
-func (o *MemberCreate) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"data",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varMemberCreate := _MemberCreate{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varMemberCreate)
-
-	if err != nil {
-		return err
-	}
-
-	*o = MemberCreate(varMemberCreate)
-
-	return err
-}
-
-type NullableMemberCreate struct {
-	value *MemberCreate
-	isSet bool
-}
-
-func (v NullableMemberCreate) Get() *MemberCreate {
-	return v.value
-}
-
-func (v *NullableMemberCreate) Set(val *MemberCreate) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableMemberCreate) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableMemberCreate) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableMemberCreate(val *MemberCreate) *NullableMemberCreate {
-	return &NullableMemberCreate{value: val, isSet: true}
-}
-
-func (v NullableMemberCreate) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableMemberCreate) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
