# resources/model_member_data_relationships_teams.go
@@ -1,126 +1,0 @@
-/*
-Cifra SSO REST API
-
-SSO REST API for Cifra app
-
-API version: 0.0.1
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-)
-
-// checks if the MemberDataRelationshipsTeams type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &MemberDataRelationshipsTeams{}
-
-// MemberDataRelationshipsTeams struct for MemberDataRelationshipsTeams
-type MemberDataRelationshipsTeams struct {
-	Data []MemberDataRelationshipsTeamsDataInner `json:"data,omitempty"`
-}
-
-// NewMemberDataRelationshipsTeams instantiates a new MemberDataRelationshipsTeams object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewMemberDataRelationshipsTeams() *MemberDataRelationshipsTeams {
-	this := MemberDataRelationshipsTeams{}
-	return &this
-}
-
-// NewMemberDataRelationshipsTeamsWithDefaults instantiates a new MemberDataRelationshipsTeams object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewMemberDataRelationshipsTeamsWithDefaults() *MemberDataRelationshipsTeams {
-	this := MemberDataRelationshipsTeams{}
-	return &this
-}
-
-// GetData returns the Data field value if set, zero value otherwise.
-func (o *MemberDataRelationshipsTeams) GetData() []MemberDataRelationshipsTeamsDataInner {
-	if o == nil || IsNil(o.Data) {
-		var ret []MemberDataRelationshipsTeamsDataInner
-		return ret
-	}
-	return o.Data
-}
-
-// GetDataOk returns a tuple with the Data field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *MemberDataRelationshipsTeams) GetDataOk() ([]MemberDataRelationshipsTeamsDataInner, bool) {
-	if o == nil || IsNil(o.Data) {
-		return nil, false
-	}
-	return o.Data, true
-}
-
-// HasData returns a boolean if a field has been set.
-func (o *MemberDataRelationshipsTeams) HasData() bool {
-	if o != nil && !IsNil(o.Data) {
-		return true
-	}
-
-	return false
-}
-
-// SetData gets a reference to the given []MemberDataRelationshipsTeamsDataInner and assigns it to the Data field.
-func (o *MemberDataRelationshipsTeams) SetData(v []MemberDataRelationshipsTeamsDataInner) {
-	o.Data = v
-}
-
-func (o MemberDataRelationshipsTeams) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o MemberDataRelationshipsTeams) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	if !IsNil(o.Data) {
-		toSerialize["data"] = o.Data
-	}
-	return toSerialize, nil
-}
-
-type NullableMemberDataRelationshipsTeams struct {
-	value *MemberDataRelationshipsTeams
-	isSet bool
-}
-
-func (v NullableMemberDataRelationshipsTeams) Get() *MemberDataRelationshipsTeams {
-	return v.value
-}
-
-func (v *NullableMemberDataRelationshipsTeams) Set(val *MemberDataRelationshipsTeams) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableMemberDataRelationshipsTeams) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableMemberDataRelationshipsTeams) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableMemberDataRelationshipsTeams(val *MemberDataRelationshipsTeams) *NullableMemberDataRelationshipsTeams {
-	return &NullableMemberDataRelationshipsTeams{value: val, isSet: true}
-}
-
-func (v NullableMemberDataRelationshipsTeams) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableMemberDataRelationshipsTeams) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
