# resources/model_team_create.go
@@ -1,158 +1,0 @@
-/*
-Cifra SSO REST API
-
-SSO REST API for Cifra app
-
-API version: 0.0.1
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the TeamCreate type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &TeamCreate{}
-
-// TeamCreate struct for TeamCreate
-type TeamCreate struct {
-	Data TeamCreateData `json:"data"`
-}
-
-type _TeamCreate TeamCreate
-
-// NewTeamCreate instantiates a new TeamCreate object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewTeamCreate(data TeamCreateData) *TeamCreate {
-	this := TeamCreate{}
-	this.Data = data
-	return &this
-}
-
-// NewTeamCreateWithDefaults instantiates a new TeamCreate object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewTeamCreateWithDefaults() *TeamCreate {
-	this := TeamCreate{}
-	return &this
-}
-
-// GetData returns the Data field value
-func (o *TeamCreate) GetData() TeamCreateData {
-	if o == nil {
-		var ret TeamCreateData
-		return ret
-	}
-
-	return o.Data
-}
-
-// GetDataOk returns a tuple with the Data field value
-// and a boolean to check if the value has been set.
-func (o *TeamCreate) GetDataOk() (*TeamCreateData, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Data, true
-}
-
-// SetData sets field value
-func (o *TeamCreate) SetData(v TeamCreateData) {
-	o.Data = v
-}
-
-func (o TeamCreate) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o TeamCreate) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["data"] = o.Data
-	return toSerialize, nil
-}
-
-func (o *TeamCreate) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"data",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varTeamCreate := _TeamCreate{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varTeamCreate)
-
-	if err != nil {
-		return err
-	}
-
-	*o = TeamCreate(varTeamCreate)
-
-	return err
-}
-
-type NullableTeamCreate struct {
-	value *TeamCreate
-	isSet bool
-}
-
-func (v NullableTeamCreate) Get() *TeamCreate {
-	return v.value
-}
-
-func (v *NullableTeamCreate) Set(val *TeamCreate) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableTeamCreate) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableTeamCreate) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableTeamCreate(val *TeamCreate) *NullableTeamCreate {
-	return &NullableTeamCreate{value: val, isSet: true}
-}
-
-func (v NullableTeamCreate) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableTeamCreate) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
