# resources/model_team_update.go
@@ -1,158 +1,0 @@
-/*
-Cifra SSO REST API
-
-SSO REST API for Cifra app
-
-API version: 0.0.1
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the TeamUpdate type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &TeamUpdate{}
-
-// TeamUpdate struct for TeamUpdate
-type TeamUpdate struct {
-	Data TeamUpdateData `json:"data"`
-}
-
-type _TeamUpdate TeamUpdate
-
-// NewTeamUpdate instantiates a new TeamUpdate object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewTeamUpdate(data TeamUpdateData) *TeamUpdate {
-	this := TeamUpdate{}
-	this.Data = data
-	return &this
-}
-
-// NewTeamUpdateWithDefaults instantiates a new TeamUpdate object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewTeamUpdateWithDefaults() *TeamUpdate {
-	this := TeamUpdate{}
-	return &this
-}
-
-// GetData returns the Data field value
-func (o *TeamUpdate) GetData() TeamUpdateData {
-	if o == nil {
-		var ret TeamUpdateData
-		return ret
-	}
-
-	return o.Data
-}
-
-// GetDataOk returns a tuple with the Data field value
-// and a boolean to check if the value has been set.
-func (o *TeamUpdate) GetDataOk() (*TeamUpdateData, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Data, true
-}
-
-// SetData sets field value
-func (o *TeamUpdate) SetData(v TeamUpdateData) {
-	o.Data = v
-}
-
-func (o TeamUpdate) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o TeamUpdate) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["data"] = o.Data
-	return toSerialize, nil
-}
-
-func (o *TeamUpdate) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"data",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varTeamUpdate := _TeamUpdate{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varTeamUpdate)
-
-	if err != nil {
-		return err
-	}
-
-	*o = TeamUpdate(varTeamUpdate)
-
-	return err
-}
-
-type NullableTeamUpdate struct {
-	value *TeamUpdate
-	isSet bool
-}
-
-func (v NullableTeamUpdate) Get() *TeamUpdate {
-	return v.value
-}
-
-func (v *NullableTeamUpdate) Set(val *TeamUpdate) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableTeamUpdate) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableTeamUpdate) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableTeamUpdate(val *TeamUpdate) *NullableTeamUpdate {
-	return &NullableTeamUpdate{value: val, isSet: true}
-}
-
-func (v NullableTeamUpdate) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableTeamUpdate) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
